# turmoil

./: .gitignore  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  RoadMap.md  __version__.py  pyproject.toml  setup.cfg  setup.py  turmoil.toml
.github/workflows/: python-package.yml
docs/: readme.md
scr/turmoil/: DataDictionary.py  __init__.py  operations.py  test.ipynb
scr/turmoil/munging/: text.py
scr/turmoil/plot/: bivariate.py  multivariate.py  univariate.py
src/: __init__.py
src/turmoil/: datadictionary.py  operations.py
