[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "turmoil"
version = "0.0.1"
authors = [
  { name="David Ochoa", email="david@bajaanalytics.com" }
]
maintainers = [
  { name="David Ochoa", email="david@bajaanalytics.com" }
]
description = "Eliminates Pre-process and EDA's turmoil via Data Dictionary"
keywords = ["dataset", "eda", "preprocessing"]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "requests",
  'importlib-metadata; python_version<"3.8"',
  'pandas > 1.0.0',
  'PyYAML > 5.1',
  'fold_to_ascii > 1.0.0',
  ipywidgets > 1.0.0,
]

[project.urls]
"Homepage" = "https://github.com/devicemxl/turmoil"
"Bug Tracker" = "https://github.com/devicemxl/turmoil/issues"

# https://peps.python.org/pep-0631/
# https://peps.python.org/pep-0621/
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-license
