#
#  ████████╗██╗   ██╗██████╗ ███╗   ███╗ ██████╗ ██╗██╗     
#  ╚══██╔══╝██║   ██║██╔══██╗████╗ ████║██╔═══██╗██║██║     
#     ██║   ██║   ██║██████╔╝██╔████╔██║██║   ██║██║██║     
#     ██║   ██║   ██║██╔══██╗██║╚██╔╝██║██║   ██║██║██║     
#     ██║   ╚██████╔╝██║  ██║██║ ╚═╝ ██║╚██████╔╝██║███████╗
#     ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚═╝     ╚═╝ ╚═════╝ ╚═╝╚══════╝
#      
[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'
dependencies = [
  'pandas > 1.0.0',
  'PyYAML > 5.1',
  'fold_to_ascii > 1.0.0',
  'ipywidgets > 1.0.0',
]

[project.urls]
"Homepage" = "https://github.com/devicemxl/turmoil"
"Bug Tracker" = "https://github.com/devicemxl/turmoil/issues"

# https://peps.python.org/pep-0631/
# https://peps.python.org/pep-0621/
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-license
