#
#  ████████╗██╗   ██╗██████╗ ███╗   ███╗ ██████╗ ██╗██╗     
#  ╚══██╔══╝██║   ██║██╔══██╗████╗ ████║██╔═══██╗██║██║     
#     ██║   ██║   ██║██████╔╝██╔████╔██║██║   ██║██║██║     
#     ██║   ██║   ██║██╔══██╗██║╚██╔╝██║██║   ██║██║██║     
#     ██║   ╚██████╔╝██║  ██║██║ ╚═╝ ██║╚██████╔╝██║███████╗
#     ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚═╝     ╚═╝ ╚═════╝ ╚═╝╚══════╝
#      
[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

# https://peps.python.org/pep-0631/
# https://peps.python.org/pep-0621/
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-license
