[metadata]
name = turmoil
version = 0.0.1
author = David Ochoa
author_email = david@bajaanalytics.com
description = Eliminates Pre-process and EDAs turmoil via Data Dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devicemxl/turmoil/
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas > 1.0.0
    PyYAML > 5.1
    fold_to_ascii > 1.0.0
    ipywidgets > 1.0.0

[options.packages.find]
where = src